--- a/SAXS_BioEn_example.ipynb
+++ b/SAXS_BioEn_example.ipynb
@@ -5,7 +5,7 @@
    "id": "1856be6d-55d6-45a9-ad2b-41480c6e2d95",
    "metadata": {},
    "source": [
-    "**Author and copyright: Juergen Koefinger, MPI of Biophysics, Frankfurt am Main, Germany, June (2022)**\n",
+    "**Author and copyright: Juergen Koefinger, MPI of Biophysics, Frankfurt am Main, Germany, June 2022**\n",
     "\n",
     "Published under MIT license (see license.md)"
    ]
@@ -27,7 +27,7 @@
     "\n",
     "o Köfinger J. et al., J. Chem. Theory Comput. **15**(5), 3390-3401 (2019), http://dx.doi.org/10.1021/acs.jctc.8b01231\n",
     "\n",
-    "for the numerical solution of the underlying optimization problem, and\n",
+    "for the numerical solution of the underlying optimization problem and\n",
     "\n",
     "o Hummer G. and Köfinger J., J. Chem. Phys. **43** 243150 (2015), http://dx.doi.org/10.1063/1.4937786\n",
     "\n",
@@ -39,7 +39,7 @@
    "id": "b0d50092-0e8e-4a5b-8cb2-f280e3d3fd44",
    "metadata": {},
    "source": [
-    "This notebook was tested with bioen verstion '0.1.1'"
+    "This notebook was tested with bioen version '0.1.1'"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "id": "5c0f8135-f2f2-4708-a75a-42b1ba001a76",
    "metadata": {},
    "source": [
-    "Read in the calcualted SAXS intensities for each structure in the ensemble. The filenames consist of a 'prefix', a value of the counter variable, and a format 'fmt' (file ending) string. You have to set the range 'idx_range' for the counter variable. The intensity files are text files with two columns. We have one file per structure. First column contains the values of the momentum transfer q. The second column contains the calculated intensity values. Note that the q-range is the same for all structure and it should be larger than for the experimental data. Intensities are stored in the numpy array "
+    "Read in the calcualted SAXS intensities for each structure in the ensemble. The filenames consist of a 'prefix', a value of the counter variable, and a format 'fmt' (file ending) string. You have to set the range 'idx_range' for the counter variable. The intensity files are text files with two columns. We have one file per structure. First column contains the values of the momentum transfer q. The second column contains the calculated intensity values. Note that the q-range is the same for all structure and it should be larger than that for the experimental data. Intensities are stored in the numpy array."
    ]
   },
   {
@@ -350,7 +350,7 @@
    "id": "5c8fd6de-0485-4370-b697-09a361c6c582",
    "metadata": {},
    "source": [
-    "We perform an intial fit of the calculated average intensity to the measured intensity, taking into account only  the experimental errors. We use a **scale parameter** $a$ and and an **offset parameter** $b$. That is, the fitted calculated intensity is given by $I'(q)=a*I(q)+b$. $b$ accounts for imperfect solvent signal correction in experiment (see Koefinger and Hummer PRE **87** (2013)) and for residual electron constrast differences between experiment and calculation."
+    "We perform an intial fit of the calculated average intensity to the measured intensity, taking into account only  the experimental errors. We use a **scale parameter** $a$ and and an **offset parameter** $b$. That is, the fitted calculated intensity is given by $I'(q)=a*I(q)+b$. $b$ accounts for imperfect solvent signal correction in experiment (see Koefinger and Hummer, Phys. Rev. E **87** (2013)) and for residual electron constrast differences between experiment and calculation."
    ]
   },
   {
@@ -400,6 +400,14 @@
     "plt.yscale('log')\n",
     "plt.xlabel(\"Momentum transfer $q$\")\n",
     "plt.ylabel(\"Intensity $I(q)$\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5edb6e9a-aec9-44fc-9b49-c3b0859a0f2c",
+   "metadata": {},
+   "source": [
+    "We plot the normalized residuals, which for uncorrelated Gaussian noise, accurate error estimates, and the correct model are normally distributed. Here, we see strong correlations and large magnitudes of the resiudals. "
    ]
   },
   {
@@ -460,7 +468,7 @@
    "id": "cc8ca22f-9e45-4d4c-a5a4-fff03e0781ea",
    "metadata": {},
    "source": [
-    "We choose an optimziation algorithm and set default parameters for the BioEn solver."
+    "We choose an optimziation algorithm for BioEn and set default parameters for the BioEn solver."
    ]
   },
   {
@@ -487,11 +495,11 @@
    "id": "696e45f5-bc4f-4a4e-96e0-a534e70b1f15",
    "metadata": {},
    "source": [
-    "For BioEn, we perform an L-curve analysis. We define a series $\\theta$, 'theta_range', which starts at the largest values (large confidence in simulations) and decreases to its lowest value (low confidence). Note that theta-values are chosen to be linear on a log-scale. \n",
+    "For BioEn, we perform an L-curve analysis. We define a series of $\\theta$ values, 'theta_range', which starts at the largest values (large confidence in simulations) and decreases to its lowest value (low confidence). Note that theta values are chosen to be linear on a log-scale for convenience. \n",
     "\n",
     "We use the obtained optimal weights at one optimization step as new intial weights for the next optimization step at the next smaller value of $\\theta$. \n",
     "\n",
-    "At each step, i.e., at each $\\theta$ value, we fit offset and scale parameter. We use the fitted values from the previous step for BioEn and the refit these values for the optimal parameters. Because these values change only slowly at each step, we obtain well converged results. "
+    "At each step, i.e., at each $\\theta$ value, we fit offset and scale parameters. We use the fitted values from the previous step for BioEn refinement and then refit these values for the optimal parameters. Because these values change only slowly at each step, we obtain well converged results. "
    ]
   },
   {
@@ -531,7 +539,7 @@
    "id": "822e45f0-a3f6-47f7-baa0-46d4f5e13df3",
    "metadata": {},
    "source": [
-    "In the list 'results', lines contains [$\\theta$, reduced chi-square, Kullback-Leibler divergence, scale parameter, offset parameter] for each step. At each step, we also save the optimal weights 'wopt' in a list 'wopts'."
+    "In the list 'results', lines contain [$\\theta$, reduced chi-square, Kullback-Leibler divergence, scale parameter, offset parameter] for each the optimal solution at each step of the L-curve analysis. At each step, we also save the optimal weights 'wopt' in a list 'wopts'."
    ]
   },
   {
@@ -2146,7 +2154,7 @@
     "    \n",
     "    SKL = saxs.KL(wopt.T[0], w0.T[0])\n",
     "    chi_sqr = 2.*bop.common.chiSqrTerm(wopt, yTilde_fit, YTilde)\n",
-    "    red_chi_sqr = chi_sqr/float(M)\n",
+    "    red_chi_sqr = chi_sqr/float(M-2) # We fit offset and scale parameter. However, M is large.\n",
     "    wopt_list.append(np.asarray(wopt.T)[0])\n",
     "    results.append([theta, red_chi_sqr, SKL, a, b ])\n",
     "results = np.asarray(results)\n",
@@ -2166,7 +2174,7 @@
    "id": "39ff61bd-1244-4666-afeb-5acad2247b52",
    "metadata": {},
    "source": [
-    "In the L-curve analysis, we select a $\\theta$ according to the shape of the (SKL, red. chi-square) curve, where SKL is the Kullback-Leibler divergence. We do so by selecting and index 'idx', e.g. in the ellbow of the plot or where the reduced chi-square is close to one. "
+    "In the L-curve analysis, we select a $\\theta$ value according to the shape of the (SKL, red. chi-square) curve, where SKL is the Kullback-Leibler divergence. We do so by trading off the information from simulations and experiment. That is, we select an index 'idx', e.g., in the ellbow of the plot or where the reduced chi-square is close to one. "
    ]
   },
   {
@@ -2189,7 +2197,7 @@
     }
    ],
    "source": [
-    "idx=25\n",
+    "idx=25 # selected index of optimal solution  \n",
     "theta_opt = results[idx,0]\n",
     "SKL_opt   = results[idx,2]\n",
     "chi_square_opt = results[idx,1]\n",
@@ -2252,7 +2260,7 @@
    "id": "1292bb2e-aa21-4274-97fa-f42c2bfe343a",
    "metadata": {},
    "source": [
-    "As a check of consistency, we plot the scale parameter as a function of $\\theta$. Note that we perform the L-curve analysis by going from large values of $\\theta$ (large confidence) to low values of $\\theta$ (low confidence). "
+    "As a check of consistency, we plot the **scale parameter** as a function of $\\theta$. Note that we perform the L-curve analysis by going from large values of $\\theta$ (large confidence) to low values of $\\theta$ (low confidence). "
    ]
   },
   {
@@ -2300,7 +2308,7 @@
    "id": "eb8a709d-8ba6-476e-8ba9-3447ddef666a",
    "metadata": {},
    "source": [
-    "As a check of consistency, we plot the offset parameter as a function of $\\theta$. Note that we perform the L-curve analysis by going from large values of $\\theta$ (large confidence) to low values of $\\theta$ (low confidence). "
+    "As a check of consistency, we plot the **offset parameter** as a function of $\\theta$. Note that we perform the L-curve analysis by going from large values of $\\theta$ (large confidence) to low values of $\\theta$ (low confidence). "
    ]
   },
   {
@@ -2369,7 +2377,7 @@
    "id": "faa6ee1a-2e91-4e55-ae2d-e51f06fde674",
    "metadata": {},
    "source": [
-    "We plot the reference weights and the selected optimal weights (idx). We first structures by the size of their weights from largest weight to smalles weight. The closer the line for the optimal weights is to the reference weights, the closer are the two ensembles. "
+    "We plot the reference weights and the selected optimal weights determined by the index 'idx'. We first rank structures by the size of their weights from largest weight to smalles weight. The closer the line for the optimal weights is to the reference weights, the closer are the two ensembles. Note that this is only true for uniform reference weights. "
    ]
   },
   {
@@ -2414,7 +2422,7 @@
    "id": "e86b5212-6c92-4b8b-a8c0-83bc2d4ff434",
    "metadata": {},
    "source": [
-    "### BioEn result for calculated intensities matched to experiment"
+    "### BioEn optimal result for calculated intensities matched to experiment"
    ]
   },
   {
@@ -2422,7 +2430,7 @@
    "id": "104519fb-820b-4126-9ec8-fce51134303b",
    "metadata": {},
    "source": [
-    "We first show our optimal BioEn refinement for the calculated intensities truncated to the q-range of the experiment. Doing so, we can easily plot the residuals. Additionally, we show the offset as a horizontal line as a consistency check. "
+    "We first show our optimal BioEn refinement result for the calculated intensities truncated to the q-range of the experiment and evaluated and experimental q-values. Doing so, we can easily calculate and plot the residuals. For the intensity, we plot the absolute value of the offset as a horizontal line as a consistency check. The absolute offset should be reasonable small compared to the plateau of the experimental intensity. "
    ]
   },
   {
@@ -2527,7 +2535,7 @@
    "id": "0e284ce2-4038-4a5b-9e58-098e0789a561",
    "metadata": {},
    "source": [
-    "We next show our optimal BioEn refinement for the calculated intensities over their full q-range. The refined intensity contains more information and can, for example, be used to determine the radius of gyration. Additionally, we show the offset as a horizontal line as a consistency check. "
+    "We next show our optimal BioEn refinement for the calculated intensities over their full q-range. The full intensity contains more information and can, for example, be used to determine the radius of gyration. Additionally, we show the absolute value of the offset as a horizontal line as a consistency check. "
    ]
   },
   {
@@ -2624,7 +2632,7 @@
    "id": "122ceab2-10bc-4f59-a8fb-e185d2bf0395",
    "metadata": {},
    "source": [
-    "Note that for this example p-values are low and close to zero due to correlations in the residuals even for strong refinement. In this sense, this example is not a great choice to illustrate the power the hplusminus statistics. \n",
+    "Note that for this example, p-values are generally low and close to zero due to correlations in the residuals even for strong refinement. In this sense, this example is not a great choice to illustrate the power the hplusminus statistics. \n",
     "\n",
     "**Please try with different data.**"
    ]
